		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


rw1050
======

There are no new Windows-specific features in this release: it has been
modified to work better on Windows XP and a number of workarounds added.


Very small circles are now forced to be visible: not all Windows
versions would display them.

Transparency in png() is now supported on `High Color' (16-bit) screens.

BLAS support is now in a separate DLL, Rblas.dll.  This means that any
packages using BLAS (KernSmooth, bqtl, fracdiff, gss, quadprog and
quantreg amongst those on CRAN) need to be re-built.  The advantage is
that less space is taken up overall, and ATLAS can be used just by
rebuilding Rblas.dll.

The installers now use bzip2 compression, so make smaller packages.

Cross-building automatically uses STAMP=NO for packages.

R and packages can now be built in a directory whose path contains
spaces (although we still don't recommend it).

If a package contains a script `configure.win' it will be run at the
start of installation.

Rcmd INSTALL and make pkg-foo test for attempted installation into the
source directory.

All the configuration options are now in file MkRules.

Unzipping is now handled by internal code based on zlib: unzip.dll is
no longer required.

Launching HTML files from the menus was not working with Netscape 6.2.x,
so a workaround has been provided.

Rgui.exe.manifest has been added to get XP-style widgets on Windows XP.

Some logical colour names have been changed to get consistent colour
schemes on Windows XP.

The books in the contents of CHTML for packages were not being sorted
correctly.



rw1041
======

Updating HTML indices, e.g. in help.start(), is done within a 
try() construct.

help.start() has a new argument `update'.

Making packages now warns if there is a configure script.

ga.h was needed for building package `windlgs', but was omitted from the