@@ -1222,7 +1222,7 @@ FBEGIN
     char *s = "", lc = '\0', msg[LF_FACESIZE + 128], title[60];
     char buf[1024];
     cursor cur;
-    if (!(lpr = newprinter(0.0, 0.0))) FVOIDRETURN;
+    if (!(lpr = newprinter(0.0, 0.0, ""))) FVOIDRETURN;
     show(c);
 /*
  * If possible, we avoid to use FixedFont for printer since it hasn't the
