@@ -93,14 +93,25 @@ static HDC chooseprinter()
 }
 
 
-printer newprinter(double width, double height)
+printer newprinter(double width, double height, char *name)
 {
     DOCINFO docinfo;
     printer obj;
-    HDC hDC = chooseprinter();
+    HDC hDC;
     double dd,AL;
     int ww,hh,x0,y0;
 
+    if(strlen(name)) {
+	OSVERSIONINFO verinfo;
+	verinfo.dwOSVersionInfoSize = sizeof(OSVERSIONINFO);
+	GetVersionEx(&verinfo);
+	switch(verinfo.dwPlatformId) {
+	case VER_PLATFORM_WIN32_NT:
+	    hDC = CreateDC("WINSPOOL", name, NULL, NULL);
+	default:
+	    hDC = CreateDC(NULL, name, NULL, NULL);
+	}
+    } else hDC = chooseprinter();
     if ( !hDC ) return NULL;
     obj = new_object(PrinterObject, (HANDLE) hDC, get_printer_base());
     if ( !obj ) {
